all necessary packages imported

--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -27,11 +27,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports here"
+    "# Imports here\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import torch \n",
+    "from torch import nn\n",
+    "import torch.nn.functional as F\n",
+    "from torch import optim\n",
+    "\n",
+    "import helper\n",
+    "import matplotlib.pyplot as plt\n",
+    "from six.moves import urllib\n",
+    "from torchvision import datasets, transforms,models\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -342,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
