--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,18 +75,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Define your transforms for the training, validation, and testing sets\n",
-    "data_transforms = \n",
+    "import torch.utils\n",
+    "import torch.utils.data\n",
+    "import torch.utils.data.dataloader\n",
+    "\n",
+    "\n",
+    "train_data_transforms = transforms.Compose([\n",
+    "    transforms.Resize(size=256),\n",
+    "    transforms.RandomHorizontalFlip(),\n",
+    "    transforms.RandomResizedCrop(size=(224,224),scale=(0.8,1.2)),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize(mean=[0.485,0.456,0.406],std=[0.229,0.224,0.225])\n",
+    "\n",
+    "])\n",
+    "validaion_testing_data_transformer = transforms.Compose([\n",
+    "    transforms.Resize(size=256),\n",
+    "    transforms.RandomCrop(size=224)\n",
+    "])\n",
     "\n",
     "# TODO: Load the datasets with ImageFolder\n",
-    "image_datasets = \n",
+    "image_datasets = datasets.ImageFolder(root=train_dir,transform=train_data_transforms)\n",
     "\n",
     "# TODO: Using the image datasets and the trainforms, define the dataloaders\n",
-    "dataloaders = "
+    "dataloaders = torch.utils.data.DataLoader(dataset=image_datasets)"
    ]
   },
   {
