--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,9 +40,10 @@
     "from torch import optim\n",
     "\n",
     "import helper\n",
-    "import matplotlib.pyplot as plt\n",
+    "# import matplotlib.pyplot as plt\n",
     "from six.moves import urllib\n",
     "from torchvision import datasets, transforms,models\n",
+    "from torchvision.models import VGG16_Weights\n",
     "\n",
     "\n"
    ]
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +92,6 @@
     "    transforms.RandomResizedCrop(size=(224,224),scale=(0.8,1.2)),\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize(mean=[0.485,0.456,0.406],std=[0.229,0.224,0.225])\n",
-    "\n",
     "])\n",
     "validaion_testing_data_transformer = transforms.Compose([\n",
     "    transforms.Resize(size=256),\n",
@@ -153,11 +153,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/hasensuadik/Documents/anaconda/anaconda3/envs/image_classifier_project/lib/python3.9/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=VGG16_Weights.IMAGENET1K_V1`. You can also use `weights=VGG16_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Build and train your network"
+    "# TODO: Build and train your network\n",
+    "# vgg16 used for computaional efficiency\n",
+    "vgg16_model = models.vgg16(weights=VGG16_Weights.DEFAULT)\n",
+    "\n",
+    "# preventing vgg16 model from bieng updated during training.\n",
+    "for param in vgg16_model.parameters():\n",
+    "    param.requires_grad = False"
    ]
   },
   {
