--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,6 +44,7 @@
     "from six.moves import urllib\n",
     "from torchvision import datasets, transforms,models\n",
     "from torchvision.models import VGG16_Weights\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "\n"
    ]
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,15 +95,23 @@
     "    transforms.Normalize(mean=[0.485,0.456,0.406],std=[0.229,0.224,0.225])\n",
     "])\n",
     "validaion_testing_data_transformer = transforms.Compose([\n",
-    "    transforms.Resize(size=256),\n",
-    "    transforms.RandomCrop(size=224)\n",
+    "     transforms.Resize(256),\n",
+    "    transforms.CenterCrop(224),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize(mean=[0.485,0.456,0.406], std=[0.229,0.224,0.225])\n",
     "])\n",
     "\n",
     "# TODO: Load the datasets with ImageFolder\n",
-    "image_datasets = datasets.ImageFolder(root=train_dir,transform=train_data_transforms)\n",
+    "train_dataset = datasets.ImageFolder(root=train_dir, transform=train_data_transforms)\n",
+    "validation_dataset = datasets.ImageFolder(root=valid_dir, transform=validaion_testing_data_transformer)\n",
+    "test_dataset = datasets.ImageFolder(root=test_dir, transform=validaion_testing_data_transformer)\n",
+    "\n",
     "\n",
     "# TODO: Using the image datasets and the trainforms, define the dataloaders\n",
-    "dataloaders = torch.utils.data.DataLoader(dataset=image_datasets)"
+    "train_dataloader = torch.utils.data.DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
+    "validation_dataloader = torch.utils.data.DataLoader(validation_dataset, batch_size=64)\n",
+    "test_dataloader = torch.utils.data.DataLoader(test_dataset, batch_size=64)\n",
+    "\n"
    ]
   },
   {
@@ -153,26 +162,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/hasensuadik/Documents/anaconda/anaconda3/envs/image_classifier_project/lib/python3.9/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=VGG16_Weights.IMAGENET1K_V1`. You can also use `weights=VGG16_Weights.DEFAULT` to get the most up-to-date weights.\n",
-      "  warnings.warn(msg)\n"
+      "Epoch 1/5.. Train loss: 0.285.. Validation loss: 1.170.. Validation accuracy: 0.690\n",
+      "Epoch 1/5.. Train loss: 0.000.. Validation loss: 0.810.. Validation accuracy: 0.794\n",
+      "Epoch 2/5.. Train loss: 0.000.. Validation loss: 0.735.. Validation accuracy: 0.796\n",
+      "Epoch 2/5.. Train loss: 0.000.. Validation loss: 0.638.. Validation accuracy: 0.825\n",
+      "Epoch 2/5.. Train loss: 0.000.. Validation loss: 0.624.. Validation accuracy: 0.821\n",
+      "Epoch 3/5.. Train loss: 0.000.. Validation loss: 0.686.. Validation accuracy: 0.823\n",
+      "Epoch 3/5.. Train loss: 0.000.. Validation loss: 0.518.. Validation accuracy: 0.858\n",
+      "Epoch 4/5.. Train loss: 0.000.. Validation loss: 0.632.. Validation accuracy: 0.835\n",
+      "Epoch 4/5.. Train loss: 0.000.. Validation loss: 0.708.. Validation accuracy: 0.819\n",
+      "Epoch 4/5.. Train loss: 0.000.. Validation loss: 0.689.. Validation accuracy: 0.847\n",
+      "Epoch 5/5.. Train loss: 0.000.. Validation loss: 0.690.. Validation accuracy: 0.839\n",
+      "Epoch 5/5.. Train loss: 0.000.. Validation loss: 0.579.. Validation accuracy: 0.867\n"
      ]
     }
    ],
    "source": [
     "# TODO: Build and train your network\n",
-    "# vgg16 used for computaional efficiency\n",
     "vgg16_model = models.vgg16(weights=VGG16_Weights.DEFAULT)\n",
     "\n",
     "# preventing vgg16 model from bieng updated during training.\n",
     "for param in vgg16_model.parameters():\n",
-    "    param.requires_grad = False"
+    "    param.requires_grad = False\n",
+    "\n",
+    "vgg16_model.classifier = nn.Sequential(\n",
+    "    nn.Linear(25088, 4096),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Dropout(0.5),\n",
+    "    nn.Linear(4096, 102), \n",
+    "    nn.LogSoftmax(dim=1)\n",
+    ")\n",
+    "\n",
+    "criterion = nn.NLLLoss()\n",
+    "# I used Adam from SGD for experimenting Adam since we use SGD during our course\n",
+    "optimizer = optim.Adam(vgg16_model.classifier.parameters(), lr=0.001)\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "vgg16_model.to(device)\n",
+    "\n",
+    "\n",
+    "epochs = 5\n",
+    "print_every = 40\n",
+    "steps = 0\n",
+    "\n",
+    "# Training loop\n",
+    "for epoch in range(epochs):\n",
+    "    in_running_loss = 0\n",
+    "    vgg16_model.train()\n",
+    "    \n",
+    "    for inputs, labels in train_dataloader:\n",
+    "        steps += 1\n",
+    "        \n",
+    "        optimizer.zero_grad()\n",
+    "        \n",
+    "        log_ps = vgg16_model(inputs)\n",
+    "        loss = criterion(log_ps, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        in_running_loss += loss.item()\n",
+    "        \n",
+    "        # check the print iteration\n",
+    "        if steps % print_every == 0:\n",
+    "            vgg16_model.eval()\n",
+    "            valid_loss = 0\n",
+    "            accuracy = 0\n",
+    "            \n",
+    "            with torch.no_grad():\n",
+    "                for inputs, labels in validation_dataloader:\n",
+    "                    inputs, labels = inputs.to(device), labels.to(device)\n",
+    "                    logps = vgg16_model(inputs)\n",
+    "                    batch_loss = criterion(logps, labels)\n",
+    "                    valid_loss += batch_loss.item()\n",
+    "                    \n",
+    "                    # Calculate accuracy\n",
+    "                    ps = torch.exp(logps)\n",
+    "                    top_p, top_class = ps.topk(1, dim=1)\n",
+    "                    equals = top_class == labels.view(*top_class.shape)\n",
+    "                    accuracy += torch.mean(equals.type(torch.FloatTensor)).item()\n",
+    "            \n",
+    "            print(f\"Epoch {epoch+1}/{epochs}.. \"\n",
+    "                  f\"Train loss: {running_loss/print_every:.3f}.. \"\n",
+    "                  f\"Validation loss: {valid_loss/len(validation_dataloader):.3f}.. \"\n",
+    "                  f\"Validation accuracy: {accuracy/len(validation_dataloader):.3f}\")\n",
+    "            \n",
+    "            running_loss = 0\n",
+    "            vgg16_model.train()"
    ]
   },
   {
@@ -186,11 +268,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Loss: 0.943.. Test Accuracy: 79.86%\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Do validation on the test set"
+    "# TODO: Do validation on the test set\n",
+    "vgg16_model.eval()\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    test_loss = 0\n",
+    "    test_accuracy = 0\n",
+    "    \n",
+    "    for inputs, labels in test_dataloader:\n",
+    "        inputs, labels = inputs.to(device), labels.to(device)\n",
+    "        \n",
+    "        logps = vgg16_model(inputs)\n",
+    "        batch_loss = criterion(logps, labels)\n",
+    "        test_loss += batch_loss.item()\n",
+    "        \n",
+    "        ps = torch.exp(logps)  # Convert log probabilities to probabilities\n",
+    "        top_p, top_class = ps.topk(1, dim=1)\n",
+    "        equals = top_class == labels.view(*top_class.shape)\n",
+    "        test_accuracy += torch.mean(equals.type(torch.FloatTensor)).item()\n",
+    "    \n",
+    "    test_loss = test_loss / len(test_dataloader)\n",
+    "    test_accuracy = test_accuracy / len(test_dataloader)\n",
+    "    \n",
+    "    print(f\"Test Loss: {test_loss:.3f}.. \"\n",
+    "          f\"Test Accuracy: {test_accuracy*100:.2f}%\")\n"
    ]
   },
   {
@@ -208,11 +321,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Save the checkpoint "
+    "# TODO: Save the checkpoint \n",
+    "import torch\n",
+    "\n",
+    "vgg16_model.class_to_idx = train_dataset.class_to_idx\n",
+    "\n",
+    "checkpoint = {\n",
+    "    'architecture': 'vgg16',\n",
+    "    'classifier': vgg16_model.classifier,\n",
+    "    'state_dict': vgg16_model.state_dict(),\n",
+    "    'class_to_idx': vgg16_model.class_to_idx,\n",
+    "    'optimizer_state_dict': optimizer.state_dict(),\n",
+    "    'epochs': epochs,\n",
+    "    'learning_rate': optimizer.param_groups[0]['lr']\n",
+    "}\n",
+    "\n",
+    "torch.save(checkpoint, 'checkpoint.pth')\n"
    ]
   },
   {
@@ -226,11 +354,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Write a function that loads a checkpoint and rebuilds the model"
+    "# TODO: Write a function that loads a checkpoint and rebuilds the model\n",
+    "def load_checkpoint(filepath):\n",
+    "    checkpoint = torch.load(filepath)\n",
+    "    \n",
+    "    if checkpoint['architecture'] == 'vgg16':\n",
+    "        model = models.vgg16(weights=VGG16_Weights.DEFAULT)\n",
+    "    else:\n",
+    "        raise ValueError(\"Architecture not recognized.\")\n",
+    "    \n",
+    "    for param in model.parameters():\n",
+    "        param.requires_grad = False\n",
+    "    \n",
+    "    model.classifier = checkpoint['classifier']\n",
+    "    \n",
+    "    model.load_state_dict(checkpoint['state_dict'])\n",
+    "    \n",
+    "    model.class_to_idx = checkpoint['class_to_idx']\n",
+    "    \n",
+    "    return model\n",
+    "\n",
+    "loaded_model = load_checkpoint('checkpoint.pth')\n"
    ]
   },
   {
@@ -266,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +423,36 @@
     "        returns an Numpy array\n",
     "    '''\n",
     "    \n",
-    "    # TODO: Process a PIL image for use in a PyTorch model"
+    "   # Open the image\n",
+    "    image = Image.open(image)\n",
+    "    \n",
+    "    width, height = image.size\n",
+    "    if width < height:\n",
+    "        new_width = 256\n",
+    "        new_height = int((256 / width) * height)\n",
+    "    else:\n",
+    "        new_height = 256\n",
+    "        new_width = int((256 / height) * width)\n",
+    "    image = image.resize((new_width, new_height))\n",
+    "    \n",
+    "    # Crop the center of the image\n",
+    "    left = (new_width - 224) / 2\n",
+    "    top = (new_height - 224) / 2\n",
+    "    right = left + 224\n",
+    "    bottom = top + 224\n",
+    "    image = image.crop((left, top, right, bottom))\n",
+    "    \n",
+    "    np_image = np.array(image) / 255.0  \n",
+    "    \n",
+    "    mean = np.array([0.485, 0.456, 0.406])  \n",
+    "    std = np.array([0.229, 0.224, 0.225])   \n",
+    "    np_image = (np_image - mean) / std\n",
+    "    \n",
+    "    np_image = np_image.transpose((2, 0, 1))\n",
+    "    \n",
+    "    tensor_image = torch.from_numpy(np_image).type(torch.FloatTensor)\n",
+    "    \n",
+    "    return tensor_image"
    ]
   },
   {
@@ -287,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,16 +473,12 @@
     "    if ax is None:\n",
     "        fig, ax = plt.subplots()\n",
     "    \n",
-    "    # PyTorch tensors assume the color channel is the first dimension\n",
-    "    # but matplotlib assumes is the third dimension\n",
     "    image = image.numpy().transpose((1, 2, 0))\n",
     "    \n",
-    "    # Undo preprocessing\n",
     "    mean = np.array([0.485, 0.456, 0.406])\n",
     "    std = np.array([0.229, 0.224, 0.225])\n",
     "    image = std * image + mean\n",
     "    \n",
-    "    # Image needs to be clipped between 0 and 1 or it looks like noise when displayed\n",
     "    image = np.clip(image, 0, 1)\n",
     "    \n",
     "    ax.imshow(image)\n",
@@ -336,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +517,27 @@
     "    ''' Predict the class (or classes) of an image using a trained deep learning model.\n",
     "    '''\n",
     "    \n",
-    "    # TODO: Implement the code to predict the class from an image file"
+    "    image = process_image(image_path)\n",
+    "    \n",
+    "    image = image.unsqueeze(0)\n",
+    "    \n",
+    "    model.to(device)\n",
+    "    image = image.to(device)\n",
+    "    \n",
+    "    model.eval()\n",
+    "    \n",
+    "    with torch.no_grad():\n",
+    "        output = model(image)\n",
+    "        probabilities = torch.exp(output) \n",
+    "               \n",
+    "        top_p, top_class = probabilities.topk(topk, dim=1)        \n",
+    "        top_p = top_p.cpu().numpy()[0]\n",
+    "        top_class = top_class.cpu().numpy()[0]\n",
+    "        \n",
+    "        idx_to_class = {v: k for k, v in model.class_to_idx.items()}\n",
+    "        top_classes = [idx_to_class[idx] for idx in top_class]\n",
+    "        \n",
+    "    return top_p, top_classes"
    ]
   },
   {
@@ -362,11 +555,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Display an image along with the top 5 classes"
+    "# TODO: Display an image along with the top 5 classes\n",
+    "def display_prediction(image_path, model, cat_to_name, topk=5, device='cuda'):\n",
+    "    ''' \n",
+    "    Displays an image along with the top K class predictions.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        image_path (str): Path to the image file.\n",
+    "        model (torchvision.models): Trained PyTorch model.\n",
+    "        cat_to_name (dict): Mapping from class labels to flower names.\n",
+    "        topk (int): Number of top predictions to display.\n",
+    "        device (str): Device to run the inference on ('cuda' or 'cpu').\n",
+    "    '''\n",
+    "    probs, classes = predict(image_path, model, topk, device)\n",
+    "    \n",
+    "    flower_names = [cat_to_name[str(cls)] for cls in classes]\n",
+    "    \n",
+    "    image = process_image(image_path)\n",
+    "    \n",
+    "    image = image.numpy().transpose((1, 2, 0))\n",
+    "    mean = np.array([0.485, 0.456, 0.406])\n",
+    "    std  = np.array([0.229, 0.224, 0.225])\n",
+    "    image = std * image + mean\n",
+    "    image = np.clip(image, 0, 1)\n",
+    "    \n",
+    "    fig, (ax1, ax2) = plt.subplots(figsize=(6,10), nrows=2)\n",
+    "    \n",
+    "    ax1.imshow(image)\n",
+    "    ax1.axis('off')\n",
+    "    ax1.set_title(flower_names[0])\n",
+    "    \n",
+    "    \n",
+    "    y_pos = np.arange(len(flower_names))\n",
+    "    ax2.barh(y_pos, probs, align='center')\n",
+    "    ax2.set_yticks(y_pos)\n",
+    "    ax2.set_yticklabels(flower_names)\n",
+    "    ax2.invert_yaxis()  \n",
+    "    ax2.set_xlabel('Probability')\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n"
    ]
   }
  ],
